Items module refactor (#65)
* refactored DamageType, updated tests

* refactored DiceType, updated tests

* refactored WeaponType, updated tests

* refactored ItemType, updated tests

* refactored Weapon, updated tests

* refactored Item, updated tests

* refactored Inventory, updated tests